[metadata]
name = neural_net
version = 0.1
summary = neural_net package
description-file = README.txt
keywords = openmdao
home-page = https://github.com/OpenMDAO-Plugins
download-url = 
author = Caitlin Kavenaugh
author-email = 
maintainer = 
maintainer-email = 
license = 
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<2.7
requires-externals = 
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]
